--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/loganferguson/Misenheimer#readme",
   "dependencies": {
-    "express": "^4.17.2"
-  },
-  "devDependencies": {}
+    "express": "^4.17.2",
+    "swup": "^2.0.14"
+  }
 }
